--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -6,8 +6,10 @@
     </menu>
   </header>
   <Ul>
+    @for (task of selectedUserTasks; track task.id) {
     <li>
-
+      <app-task [task]="task" (complete)="onCompleteTask($event)"/>
     </li>
+  }
   </Ul>
 </section>
